plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.twohundredone'
version = '0.0.1-SNAPSHOT'
description = 'TaskOnServer'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // s3
    implementation platform("software.amazon.awssdk:bom:2.28.21")
    implementation "software.amazon.awssdk:s3"

    //Web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    //Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    //Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //Swagger
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6")

    //OAUth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    //Devtools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    //H2(local test용)
    runtimeOnly 'com.h2database:h2'

    //Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
